...
                    singleLine = true,
                    label = { Text(stringResource(R.string.ui_search_history)) }
                )
            } else {
                Text(
                    text = stringResource(R.string.ui_history),
                    modifier = Modifier.weight(1f).testTag("history-title"),
                    style = MaterialTheme.typography.headlineMedium,
                    fontWeight = FontWeight.Bold,
                    color = MaterialTheme.colorScheme.onSurface
                )
            }
            IconButton(onClick = {
...
